--- a/api/qsharp/microsoft.quantum.errorcorrection.fivequbitcode.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.fivequbitcode.yml
@@ -8,7 +8,7 @@ remarks: >-
   以下两篇文章中单独找到了此代码：
 
 
-  - C. H. Bennett，DiVincenzo，J。 Smolin 和 K. K。 Wootters，"Mixed 状态牵连 and 量子纠错"，"Phys，54（1996） pp 3824-3851;https://arxiv.org/abs/quant-ph/9604024 和
+  - C. H. Bennett，DiVincenzo，J。 Smolin 和 K. K。 Wootters，"Mixed 状态牵连 and 量子纠错"，"Phys，54（1996） pp 3824-3851;https://arxiv.org/abs/quant-ph/9604024和
 
   - R. Laflamme，Miquel，J P。 巴斯和 W.x.y.z。 Zurek "完美的量程错误纠正代码" Phys Lett。 77（1996） pp 198-201;https://arxiv.org/abs/quant-ph/9602019
 syntax: 'function FiveQubitCode () : Microsoft.Quantum.ErrorCorrection.QECC'
@@ -18,12 +18,12 @@ input:
 output:
   content: Microsoft.Quantum.ErrorCorrection.QECC
   types:
-  - summary: 通过指定 `QECC` 类型，返回量程错误更正代码的实现。
+  - summary: 通过指定`QECC`类型返回量程错误更正代码的实现。
     uid: microsoft.quantum.errorcorrection.qecc
 metadata:
-  ms.openlocfilehash: 1865ededef3e3ada743a49ef81141aeffdcfed0a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 39bd3adacd0f8e872d682d0df0bf81a3f1e1d8f0
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73220396"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684948"
