--- a/api/qsharp/microsoft.quantum.logical.lessthanl.yml
+++ b/api/qsharp/microsoft.quantum.logical.lessthanl.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 严格小于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`严格小于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 0be14fe5fe2439108f983494edee59f5f596881c
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 9d4f97dc354ae51052c812d6cef3673edee84cb0
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73235577"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684693"
