--- a/api/qsharp/microsoft.quantum.logical.lessthanorequall.yml
+++ b/api/qsharp/microsoft.quantum.logical.lessthanorequall.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 小于或等于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`小于或等于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 3f6ae9d9c97f9a6c24f6b4a76d0f46914bf94f9a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 48570cf03cfcf676af633ee2f07b904698b471b6
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73235475"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684635"
