--- a/api/qsharp/microsoft.quantum.oracles.stateoraclefromdeterministicstateoracle.yml
+++ b/api/qsharp/microsoft.quantum.oracles.stateoraclefromdeterministicstateoracle.yml
@@ -3,26 +3,26 @@ uid: microsoft.quantum.oracles.stateoraclefromdeterministicstateoracle
 name: StateOracleFromDeterministicStateOracle
 type: function
 namespace: Microsoft.Quantum.Oracles
-summary: 将 `DeterministicStateOracle` 类型的 oracle 转换为 `StateOracle`。
+summary: 将类型`DeterministicStateOracle`的 oracle 转换为`StateOracle`。
 syntax: 'function StateOracleFromDeterministicStateOracle (deterministicStateOracle : Microsoft.Quantum.Oracles.DeterministicStateOracle) : Microsoft.Quantum.Oracles.StateOracle'
 input:
   content: '(deterministicStateOracle : Microsoft.Quantum.Oracles.DeterministicStateOracle)'
   types:
   - name: deterministicStateOracle
-    summary: 准备 oracle $A $ `DeterministicStateOracle`类型的状态。
+    summary: 准备 oracle $A 类型`DeterministicStateOracle`为的状态。
     uid: microsoft.quantum.oracles.deterministicstateoracle
 output:
   content: Microsoft.Quantum.Oracles.StateOracle
   types:
-  - summary: 这种状态准备 oracle $A $，但现在 `StateOracle`类型。 请注意，此 `StateOracle` 中的标志索引是一个虚拟变量，因此不起作用。
+  - summary: 相同状态准备 oracle $A $，但现在为类型`StateOracle`。 请注意，在这`StateOracle`种情况下，标志索引是一个虚拟变量，因此不起作用。
     uid: microsoft.quantum.oracles.stateoracle
 seeAlso:
 - microsoft.quantum.canon.deterministicstateoracle
 - microsoft.quantum.canon.stateoracle
 metadata:
-  ms.openlocfilehash: 681d5a8a132819fa1b0c1af049418123d21ecec4
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 9431b58659bb50de872f73890a4a055c5534b2a0
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73228199"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685150"
