--- a/api/qsharp/microsoft.quantum.errorcorrection.tablelookuprecovery.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.tablelookuprecovery.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.errorcorrection.tablelookuprecovery
 name: TableLookupRecovery
 type: function
 namespace: Microsoft.Quantum.ErrorCorrection
-summary: 对于给定的 qubits 寄存器上的 Pauli 操作表，此函数返回 `RecoveryFn` 类型的对象，该对象包含对给定的 Pauli 操作数组执行表查找解码所需的所有信息。
+summary: 对于给定的 qubits 寄存器上的 Pauli 操作表，此函数返回一个类型`RecoveryFn`为的对象，该对象包含对给定的 Pauli 操作数组执行表查找解码所需的所有信息。
 syntax: 'function TableLookupRecovery (table : Pauli[][]) : Microsoft.Quantum.ErrorCorrection.RecoveryFn'
 input:
   content: '(table : Pauli[][])'
@@ -18,12 +18,12 @@ input:
 output:
   content: Microsoft.Quantum.ErrorCorrection.RecoveryFn
   types:
-  - summary: '`RecoveryFn`类型的对象（即，映射与给定症状数组关联的映射 `Syndrome -> Pauli[]` 对应的 Pauli 更正操作。'
+  - summary: 类型`RecoveryFn`为的对象，即，与给定症状`Syndrome -> Pauli[]`数组关联的映射对应 Pauli 更正操作。
     uid: microsoft.quantum.errorcorrection.recoveryfn
 metadata:
-  ms.openlocfilehash: cd84c24f5a50574a9bc2ab189832ada6516f12a8
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 20400c4afb1819225192ea695e4cc525e0b2f22b
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73232211"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684809"
