--- a/api/qsharp/microsoft.quantum.logical.greaterthanorequali.yml
+++ b/api/qsharp/microsoft.quantum.logical.greaterthanorequali.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 大于或等于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`大于或等于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: d98611131760ce02eb9f5a6cffe3b6ca5617b7f2
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 78c69a4e3e0463b965b69969e384aaf396471b91
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73225581"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684763"
