--- a/api/qsharp/microsoft.quantum.logical.lessthani.yml
+++ b/api/qsharp/microsoft.quantum.logical.lessthani.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 严格小于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`严格小于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: a38ab42df81e06ccfb08b6ce180ec918ae1209a8
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 3711564d51f6a9fd1fb1a4d6b429e29edcfd6127
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73235594"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684704"
