--- a/api/qsharp/microsoft.quantum.logical.lessthanorequald.yml
+++ b/api/qsharp/microsoft.quantum.logical.lessthanorequald.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 小于或等于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`小于或等于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 9ec009d0f5294a3553ae8482490bf58ea95a11da
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 54ecd29273391dd51a605f6adaff264fbacbb035
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73235526"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684676"
