--- a/api/qsharp/microsoft.quantum.logical.lessthanorequali.yml
+++ b/api/qsharp/microsoft.quantum.logical.lessthanorequali.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 小于或等于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`小于或等于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 9c9b663eab0c88024f05bd9da245a3c49c22ac8a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: f287c5cd0c43ace8fe0397bf237073b514b4b964
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73235492"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684647"
