--- a/api/qsharp/microsoft.quantum.logical.not.yml
+++ b/api/qsharp/microsoft.quantum.logical.not.yml
@@ -26,13 +26,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `value` `false`时，`true`。
+  - summary: '`true`当且仅当`value`为`false`时。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 85df2e3787e96ab18c351dc5a210e5b8a2803b09
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 0d2e455b7567a282709711caa6d5a5e59f52100b
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73235407"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684605"
