--- a/api/qsharp/microsoft.quantum.machinelearning.misclassifications.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.misclassifications.yml
@@ -29,14 +29,14 @@ input:
 output:
   content: Int[]
   types:
-  - summary: 索引 `idx` `inferredLabels[idx] != actualLabels[idx]`的数组。
+  - summary: 索引`idx`的数组， `inferredLabels[idx] != actualLabels[idx]`例如。
     isArray: true
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 3e8d0bfcacb97e10e861297078b70396e45705fd
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: 62a99747a7e711ece041ee0d0d046ac78c0bb95e
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77908763"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684472"
