--- a/api/qsharp/microsoft.quantum.machinelearning.trainsequentialclassifieratmodel.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.trainsequentialclassifieratmodel.yml
@@ -16,7 +16,7 @@ input:
     isArray: true
     uid: microsoft.quantum.machinelearning.labeledsample
   - name: options
-    summary: 训练时要使用的配置;有关更多详细信息，请参阅 @"microsoft.quantum.machinelearning.trainingoptions" 和 @"microsoft.quantum.machinelearning.defaulttrainingoptions"。
+    summary: 训练时要使用的配置;有关@"microsoft.quantum.machinelearning.trainingoptions"更@"microsoft.quantum.machinelearning.defaulttrainingoptions"多详细信息，请参阅和。
     uid: microsoft.quantum.machinelearning.trainingoptions
   - name: trainingSchedule
     summary: 在定型步骤中从定型数据中选择样本时要使用的采样计划。
@@ -39,9 +39,9 @@ seeAlso:
 - microsoft.quantum.machinelearning.trainsequentialclassifier
 - microsoft.quantum.machinelearning.validatesequentialclassifier
 metadata:
-  ms.openlocfilehash: 5b574d72115518389124d850a96f9fbcd669bd4e
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: ab30be93a0a1e0b347d2adfe82dbcf07b12d6996
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77909035"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82684273"
