--- a/api/qsharp/microsoft.quantum.preparation.quantumromqubitcount.yml
+++ b/api/qsharp/microsoft.quantum.preparation.quantumromqubitcount.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.preparation.quantumromqubitcount
 name: QuantumROMQubitCount
 type: function
 namespace: Microsoft.Quantum.Preparation
-summary: 返回必须分配给 `QuantumROM`返回的操作的 qubits 的总数。
+summary: 返回必须分配给返回的操作的 qubits 的总数`QuantumROM`。
 syntax: 'function QuantumROMQubitCount (targetError : Double, nCoeffs : Int) : (Int, (Int, Int))'
 input:
   content: '(targetError : Double, nCoeffs : Int)'
@@ -13,7 +13,7 @@ input:
     isPrimitive: true
     uid: Double
   - name: nCoeffs
-    summary: 在 `QuantumROM`中指定的系数数。
+    summary: 在中`QuantumROM`指定的系数数。
     isPrimitive: true
     uid: Int
 output:
@@ -23,7 +23,7 @@ output:
       ## <a name="first-parameter"></a>第一个参数
 
 
-      元组 `(x,(y,z))` 其中，`x = y + z` 是分配的 qubits 总数，`y` 是 `LittleEndian` 寄存器的 qubits 数，`z` 是垃圾 qubits 的数目。
+      一个元`(x,(y,z))`组`x = y + z` ，其中是所分配的 qubits 总数`y` ，是`LittleEndian`寄存器的 qubits 数， `z`是垃圾 qubits 的数目。
     types:
     - isPrimitive: true
       uid: Int
@@ -33,9 +33,9 @@ output:
       - isPrimitive: true
         uid: Int
 metadata:
-  ms.openlocfilehash: fdc1d18f088cd5d07558a6fac28b92af6c9884d3
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 717de1097641dcbabf6441424e88d77b71e05738
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73226380"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685119"
