commit translated contents

--- a/api/qsharp/microsoft.quantum.errorcorrection.css.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.css.yml
@@ -3,12 +3,12 @@ uid: microsoft.quantum.errorcorrection.css
 name: CSS
 type: newtype
 namespace: Microsoft.Quantum.ErrorCorrection
-summary: 表示 Calderbank –选定– Steane （CSS）代码，该代码由其编码器、解码器及其每个 `X` 和 `Z` 错误的症状度量过程分别定义。
+summary: 表示 Calderbank –选定– Steane （CSS）代码，该代码由其编码器、解码器定义，并分别表示`X`和`Z`错误的症状度量过程。
 syntax: newtype CSS = (Microsoft.Quantum.ErrorCorrection.EncodeOp, Microsoft.Quantum.ErrorCorrection.DecodeOp, Microsoft.Quantum.ErrorCorrection.SyndromeMeasOp, Microsoft.Quantum.ErrorCorrection.SyndromeMeasOp);
 metadata:
-  ms.openlocfilehash: d2dd8df5aeb53f1dd0df26e1770929bb13fc6f41
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: b1bedcc35249997229cb7d6615df0ad756b4f5ca
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73234710"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685612"
