--- a/api/qsharp/microsoft.quantum.math.abscomplex.yml
+++ b/api/qsharp/microsoft.quantum.math.abscomplex.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.math.abscomplex
 name: AbsComplex
 type: function
 namespace: Microsoft.Quantum.Math
-summary: 返回 `Complex`类型的复数的绝对值。
+summary: 返回类型`Complex`的复数的绝对值。
 syntax: 'function AbsComplex (input : Microsoft.Quantum.Math.Complex) : Double'
 input:
   content: '(input : Microsoft.Quantum.Math.Complex)'
@@ -18,9 +18,9 @@ output:
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 75592bd683679e49ca453ab3c93954c963d536b9
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 76c1a367f72ecdbcf9a92180b05f4e2c05833cee
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73235067"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685825"
