--- a/api/qsharp/microsoft.quantum.intrinsic.y.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.y.yml
@@ -7,7 +7,7 @@ summary: >-
   将 Pauli $Y $ 入口。
 
 
-  \begin{align} \ sigma_y \mathrel{： =} \begin{bmatrix} 0 &-i \\& \\ 0 \end{bmatrix}。
+  \begin{align} \ sigma_y \mathrel{： =} \begin{bmatrix} 0 &-i \\ \\ & 0 \end{bmatrix}。
 
   \end{align}
 syntax: 'operation Y (qubit : Qubit) : Unit'
@@ -27,9 +27,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: fe9a1b0304328525bc172f22a603c026f781af94
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 6e5f5b35541b8eebc8cd0168e5665a39a75eb7b1
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73216248"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82686011"
