--- a/api/qsharp/microsoft.quantum.logical.equald.yml
+++ b/api/qsharp/microsoft.quantum.logical.equald.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 等于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`等于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: b8b9b8e73295f9dc9d5943dcf7b68719aa71817d
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: ff3d3a0843a0199a56ae7c80ed83b5ff86516b16
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73233163"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685924"
