--- a/api/qsharp/microsoft.quantum.logical.equall.yml
+++ b/api/qsharp/microsoft.quantum.logical.equall.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 等于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`等于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: c3e2dd73d95a8697bbb4216de6a0682569d103d9
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: d0ffa5d1c47b407fc2e62e73220bbcea40f16a78
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73233112"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685916"
