--- a/api/qsharp/microsoft.quantum.logical.equalr.yml
+++ b/api/qsharp/microsoft.quantum.logical.equalr.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 等于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`等于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 672b696f89235925181e13c3bb8ed6e052cb6e4c
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 88ac59dd3a0972e1c43e2d4c7716dcf7403d83c0
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73233061"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685897"
