--- a/api/qsharp/microsoft.quantum.logical.greaterthand.yml
+++ b/api/qsharp/microsoft.quantum.logical.greaterthand.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 严格大于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`严格大于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 9dbb502eb6e54b93bb7cb24c2efefe5aa4906222
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 6aab2a2ef67a8d5efa8507144b65eabc35f84405
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73225700"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685877"
