--- a/api/qsharp/microsoft.quantum.logical.greaterthani.yml
+++ b/api/qsharp/microsoft.quantum.logical.greaterthani.yml
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: 当且仅当 `a` 严格大于 `b`时，`true`。
+  - summary: '`true`当且仅当`a`严格大于时`b`。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 9fc87e612d2234c47fc343cfa353d46dadbd556a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: c4cd046280e255f41d0f93035d09ab08d53ac112
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73225683"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685844"
