--- a/api/qsharp/microsoft.quantum.math.continuedfractionconvergentl.yml
+++ b/api/qsharp/microsoft.quantum.math.continuedfractionconvergentl.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.math.continuedfractionconvergentl
 name: ContinuedFractionConvergentL
 type: function
 namespace: Microsoft.Quantum.Math
-summary: 查找最接近 `fraction` 且分母小于或等于 `denominatorBound` 的连续分数收敛性
+summary: 查找最接近于`fraction`分母小于或等于的连续分数收敛性`denominatorBound`
 syntax: 'function ContinuedFractionConvergentL (fraction : Microsoft.Quantum.Math.BigFraction, denominatorBound : BigInt) : Microsoft.Quantum.Math.BigFraction'
 input:
   content: '(fraction : Microsoft.Quantum.Math.BigFraction, denominatorBound : BigInt)'
@@ -16,12 +16,12 @@ input:
 output:
   content: Microsoft.Quantum.Math.BigFraction
   types:
-  - summary: 与分母小于或等于 `fraction` 的持续分数最接近 `denominatorBound`
+  - summary: 最接近`fraction`的分数，分母小于或等于`denominatorBound`
     uid: microsoft.quantum.math.bigfraction
 metadata:
-  ms.openlocfilehash: 33092dc94b5af0693a019ad2ba19586d8e46c412
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: a5b17320e044bc984553f6fc13cec028bcb16bb2
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73229831"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685715"
