--- a/api/qsharp/microsoft.quantum.math.expmodi.yml
+++ b/api/qsharp/microsoft.quantum.math.expmodi.yml
@@ -13,7 +13,7 @@ summary: >-
 
 
   假定 $N $，$x $ 为正，且 power 为非负数。
-remarks: 与 `power`中的位数（而非 `power` 本身）的时间成正比。
+remarks: 与中`power`的位数成正比，而不是`power`本身。
 syntax: 'function ExpModI (expBase : Int, power : Int, modulus : Int) : Int'
 input:
   content: '(expBase : Int, power : Int, modulus : Int)'
@@ -33,9 +33,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: cd98e60dab928d1cbb5055a762c8ffa31c460009
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: f1da101fc6ae949aff96100f6b236d202c40d554
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73229491"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82685358"
